REGRESSION (276827@main): When drawing a pattern, get the oriented image frame only if the orientation is not TopLeft https://bugs.webkit.org/show_bug.cgi?id=271977 rdar://125731142

Reviewed by Mike Wyrzykowski.

If the passed orientation is FromImage, resolve the current orientation before
checking its value to the oriented ImageFrame.

* Source/WebCore/platform/graphics/BitmapImageSource.cpp:
(WebCore::BitmapImageSource::preTransformedNativeImageAtIndex):

Canonical link: https://commits.webkit.org/276902@main